<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ImOkMessenger</string>
    <string name="select_contacts_for_dispatch">Выберите контакты для СМС</string>
    <string name="choose_text_for_sms">Выберите текст для СМС</string>
    <string name="edit_data">Редактировать данные</string>
    <string name="select_contact_to_send_message">Выберите контакты,которым будут отправлятся СМС</string>
    <string name="text_for_button_confirm">Подтвердить</string>
    <string name="enter_your_message">Введите текст сообщения</string>
    <string name="message_text_intro">Пожалуйста,введите текст сообщения,которое будут получать выбранные
    Вами контакты</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">На главную</string>
    <string name="set_battery_level">Настроить уровень батареи</string>
    <string name="additionally">Дополнительно</string>
    <string name="share">Поделится</string>
    <string name="enter_the_charge_level">Ввести уровень заряда</string>
    <string name="cancel">Отмена</string>
    <string name="reset">Сбросить</string>
    <string name="save">Сохранить</string>
    <string name="enter_your_message_text">Введите текст сообщения</string>
    <string name="content_desc">header image for navigation panel</string>
    <string name="imok">Я ВПорядке</string>
    <string name="mail">maximturkin50@gmail.com</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="set_language">Язык</string>
    <string name="set_Russian">Русский</string>
    <string name="set_English">Английский</string>
    <string name="set_OK">ОК</string>
    <string name="cont_description">cont_description</string>
    <string name="app_description">Спасибо,что скачали приложение! Оно поможет уведомить друзей, что вы будете не на связи,
       так как ваш телефон скоро разрядится.Это просто-при достижении низкого уровня заряда телефон отправит текстовое сообщение. Нажав
       кнопку "Выбрать контакты", вы можете отметить людей, которым будет отсылаться это сообщение.Нажав "Выбрать текст", вы сможете
           установить текст сообщения.Кнопка Редактировать нужна для исправления списка рассылки или изменения текста.Кроме того,
     вы можете самостоятельно указать уровень заряда, при котором будет рассылаться сообщение, выбрав кнопку "Настроить уровень батареи"
           в боковом меню.Если не указать свой уровень заряда,то сообщение будет отправлено автоматически при уровне заряда 3%. Приятного
           пользования!
        </string>

    <string name="rules">Правила</string>
    <string name="edit_contacts">Редактировать контакты</string>
    <string name="update_contacts">Обновить контакты</string>
    <string name="edit_messages">Редактировать сообщение</string>
    <string name="about_version">О версии</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="license_title_fab">Maxim Turkin</string>
    <string name="license_author_fab">Version 1.0</string>
    <string name="license_content_fab">Copyright 2018 Maxim Turkin</string>
    <string name="license_content1_fab">
        The MIT License (MIT)
        \n\nCopyright 2014 Oleksandr Melnykov

        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        \n\nThe above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>

    <string name="license_title_tabs">PagerSlidingTabStrip</string>
    <string name="license_author_tabs">Andreas Stuetz</string>
    <string name="license_content_tabs">
        Copyright 2013 Andreas Stuetz

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="link">Website: github.com/eifel1390/ImOkMessenger2</string>










</resources>
