<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/home" />
        <item
            android:id="@+id/changeBatteryLevel"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/set_battery_level" />
        
        <item
            android:id="@+id/changeLanguage"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/set_language" />


    </group>

    <item android:title="@string/additionally">
        <menu>
            <item
                android:id="@+id/fb"
                android:icon="@drawable/youtube"
                android:title="@string/share"/>

        </menu>
    </item>

</menu>
