<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSelectContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_contacts_for_dispatch"/>

    <Button
        android:id="@+id/btnSmsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_text_for_sms"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_data"/>

</LinearLayout>

