<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/viewContainer"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp">

    <EditText
        android:id="@+id/editLevel_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_message_edit_text"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/enter_the_charge_level" >

        <requestFocus />
    </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="5dp"
            android:background="@drawable/button_gplus_gb"
            android:textColor="@color/white"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="5dp"
            android:background="@drawable/button_twitter_gb"
            android:textColor="@color/white"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_save_charge"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"

            android:background="@drawable/button_fb_gb"
            android:text="@string/save" />

    </LinearLayout>

    </LinearLayout>



</RelativeLayout>
