<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1" >

    <EditText
        android:id="@+id/editText_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_message_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_message" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_message"
        android:layout_below="@+id/editText_message"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="#f39c12"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/corner_view"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>
